[package]
name = "jwst-rpc"
version = "0.1.0"
edition = "2021"
authors = ["DarkSky <darksky2048@gmail.com>"]
license = "AGPL-3.0-only"

[features]
default = ["websocket", "webrtc"]
websocket = ["axum", "tokio-tungstenite", "url"]
webrtc = ["bytes", "reqwest", "webrtcrs"]

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
byteorder = "1.4.3"
futures = "0.3.28"
lru_time_cache = "0.11.11"
nanoid = "0.4.0"
nom = "7.1.3"
rand = "0.8.5"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
yrs = "0.16.5"

# ======== websocket dependencies ========
axum = { version = "0.6.16", features = ["ws"], optional = true }
tokio-tungstenite = { version = "0.18.0", features = [
    "rustls-tls-webpki-roots",
], optional = true }
url = { version = "2.3.1", optional = true }

# ======== webrtc dependencies ========
bytes = { version = "1.4", optional = true }
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "rustls-tls",
], optional = true }
webrtcrs = { package = "webrtc", version = "0.7.3", optional = true }

# ======= workspace dependencies =======
jwst = { workspace = true }
jwst-codec = { workspace = true }
jwst-storage = { workspace = true }

[dev-dependencies]
indicatif = "0.17.3"
jwst-logger = { path = "../jwst-logger" }
tempfile = "3.4.0"
