[package]
name = "jwst-rpc"
version = "0.1.0"
edition = "2021"
authors = ["DarkSky <darksky2048@gmail.com>"]
license = "AGPL-3.0-only"

[features]
default = ["websocket"]
websocket = ["axum", "tokio-tungstenite", "url"]
webrtc = ["bytes", "reqwest", "webrtcrs"]

[dependencies]
# ========= workspace dependencies =========
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
nanoid = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }

# ======== websocket dependencies ========
axum = { version = "0.6.16", features = ["ws"], optional = true }
tokio-tungstenite = { version = "0.20.0", features = [
  "rustls-tls-webpki-roots",
], optional = true }
url = { version = "2.3.1", optional = true }

# ======== webrtc dependencies ========
bytes = { workspace = true, optional = true }
reqwest = { version = "0.11.18", default-features = false, features = [
  "json",
  "rustls-tls",
], optional = true }
webrtcrs = { package = "webrtc", version = "0.8.0", optional = true }

# ======= workspace dependencies =======
jwst-codec = { workspace = true }
jwst-core = { workspace = true }
jwst-storage = { workspace = true }

[dev-dependencies]
indicatif = "0.17.3"
jwst-logger = { path = "../jwst-logger" }
tempfile = "3.4.0"
