[package]
name = "jwst-static"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
rust-embed = { git = "https://github.com/pyrossh/rust-embed", rev = "7c0fc42", features = [
    "compression",
    "include-exclude",
    "mime-guess",
] }
url-escape = "0.1.1"
