[package]
name = "jwst-static"
version = "0.1.0"
edition = "2021"
authors = ["DarkSky <darksky2048@gmail.com>"]
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.6"
rust-embed = { version = "6.4.2", features = [
    "compression",
    "include-exclude",
    "mime-guess",
] }
utoipa_v2 = { package = "utoipa", version = "2.4.2" }
utoipa_v3 = { package = "utoipa", version = "3.0.3" }
utoipa-swagger-ui = { version = "3.0.2", features = ["axum"] }
url-escape = "0.1.1"
