[package]
name = "jwst-storage"
version = "0.1.0"
edition = "2021"
authors = ["DarkSky <darksky2048@gmail.com>"]
license = "AGPL-3.0-only"

[features]
default = ["sqlite"]
mysql = ["sea-orm/sqlx-mysql"]
postgres = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
bytes = "1.4.0"
chrono = { version = "0.4.23", features = ["serde"] }
futures = "0.3.26"
governor = "0.5.1"
image = { version = "0.24.5", features = ["webp-encoder"] }
path-ext = "0.1.0"
sha2 = "0.10.6"
sea-orm = { version = "0.11.0", features = ["runtime-tokio-rustls", "macros"] }
sea-orm-migration = "0.11.0"
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["fs", "macros", "sync"] }
tokio-util = { version = "0.7.7", features = ["io"] }
url = "2.3.1"
yrs = "0.16.3"

# ======= workspace dependencies =======
jwst = { path = "../jwst" }
jwst-logger = { path = "../jwst-logger" }
jwst-storage-migration = { path = "./src/migration" }

[dev-dependencies]
rand = "0.8.5"
