[package]
name = "jwst-storage"
version = "0.1.0"
edition = "2021"
authors = ["DarkSky <darksky2048@gmail.com>"]
license = "AGPL-3.0-only"

[features]
default = ["sqlite"]
mysql = ["sea-orm/sqlx-mysql"]
postgres = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
bytes = "1.4.0"
chrono = { version = "0.4.24", features = ["serde"] }
futures = "0.3.28"
governor = "0.5.1"
image = { version = "0.24.6", features = ["webp-encoder"] }
lib0 = "0.16.5"
path-ext = "0.1.0"
sha2 = "0.10.6"
sea-orm = { version = "0.11.2", features = ["runtime-tokio-rustls", "macros"] }
sea-orm-migration = "0.11.2"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["fs", "macros", "sync"] }
tokio-util = { version = "0.7.7", features = ["io"] }
url = "2.3.1"
yrs = "0.16.5"
opendal = { version = "0.38.0", default-features = false, features = [
    "rustls",
    "services-s3",
] }
dotenvy = "0.15.7"

# ======= workspace dependencies =======
jwst = { workspace = true }
jwst-codec = { workspace = true }
jwst-logger = { workspace = true }
jwst-storage-migration = { path = "./src/migration" }

[dev-dependencies]
rand = "0.8.5"
