[package]
name = "jwst-wasm"
version = "0.1.0"
authors = ["DarkSky <darksky2048@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[features]
default = ["custom_alloc", "log_panic"]
custom_alloc = ["wee_alloc"]
log_panic = ["console_error_panic_hook"]

[dependencies]
cfg-if = "^1.0.0"
jwst = { path = "../jwst" }
js-sys = "^0.3.60"
wasm-bindgen = "^0.2.83"
yrs = { path = "../../forks/y-crdt/yrs" }

[dependencies.console_error_panic_hook]
version = "^0.1.7"
optional = true

[dependencies.wee_alloc]
version = "^0.4.5"
optional = true

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
