[package]
name = "jwst"
version = "0.1.0"
authors = ["DarkSky <darksky2048@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[features]
workspace-search = ["dep:tantivy"]
default = ["workspace-search"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
bytes = "1.4.0"
cang-jie = "0.15.0"
chrono = "0.4.23"
dashmap = "5.4.0"
futures = "0.3.26"
lib0 = { version = "0.16.2", features = ["lib0-serde"] }
log = "0.4.17"
utoipa = "2.4.2"
schemars = "0.8.11"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
type-map = "0.5.0"
tantivy = { version = "0.19.2", optional = true }
tokio = { version = "1.25.0", features = ["sync"] }

y-sync = "0.2.0"
yrs = "0.16.2"

[dev-dependencies]
assert-json-diff = "2.0.2"
