[package]
name = "jwst"
version = "0.1.1"
authors = ["DarkSky <darksky2048@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[features]
workspace-search = ["dep:tantivy"]
default = ["workspace-search"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.66"
base64 = "0.21.0"
bytes = "1.4.0"
cang-jie = "0.15.0"
chrono = "0.4.23"
convert_case = "0.6.0"
futures = "0.3.27"
lib0 = { version = "0.16.5", features = ["lib0-serde"] }
nanoid = "0.4.0"
utoipa = "2.4.2"
schemars = "0.8.12"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.39"
tracing = { version = "0.1.37", features = ["log"] }
type-map = "0.5.0"
tantivy = { version = "0.19.2", optional = true }
tokio = { version = "1.26.0", features = ["sync"] }
y-sync = "0.3.0"
yrs = "0.16.5"
tokio-tungstenite = { version = "0.18.0", features = [
    "rustls-tls-webpki-roots",
] }

[dev-dependencies]
assert-json-diff = "2.0.2"

[build-dependencies]
anyhow = "1.0.69"
vergen = { version = "7.5.1", default-features = false, features = [
    "cargo",
    "git",
    "rustc",
] }
