[package]
name = "jwst"
version = "0.1.1"
authors = ["DarkSky <darksky2048@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[features]
workspace-search = ["dep:tantivy"]
default = ["workspace-search"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
base64 = "0.21.0"
bytes = "1.4.0"
cang-jie = "0.15.0"
chrono = "0.4.24"
convert_case = "0.6.0"
futures = "0.3.28"
lib0 = { version = "0.16.5", features = ["lib0-serde"] }
nanoid = "0.4.0"
utoipa = "3.3.0"
schemars = "0.8.12"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tracing = { version = "0.1.37", features = ["log"] }
type-map = "0.5.0"
tantivy = { version = "0.19.2", optional = true }
tokio = { version = "1.27.0", features = [
    "sync",
    "time",
    "rt",
    "rt-multi-thread",
    "net",
] }
y-sync = "0.3.0"
yrs = "0.16.5"

# ======= workspace dependencies =======
jwst-codec = { path = "../jwst-codec" }

[dev-dependencies]
assert-json-diff = "2.0.2"

[build-dependencies]
vergen = { version = "7.5.1", default-features = false, features = [
    "cargo",
    "git",
    "rustc",
] }
