[package]
name = "jwst_logger"
version = "0.1.0"
authors = ["DarkSky <darksky2048@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "^0.4.23"
log = "^0.4.17"

[dependencies.fern]
version = "^0.6.1"
features = ["colored"]
