[package]
name = "jwst_storage"
version = "0.1.0"
edition = "2021"
authors = ["DarkSky <darksky2048@gmail.com>"]
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4.22"
async-trait = "0.1.59"
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["fs", "sync"] }
tokio-util = { version = "0.7.4", features = ["io"] }
sha3 = "0.10.6"
bytes = "1.3.0"
# The async version of this is not really async
fs4 = { version = "0.6.2", features = ["tokio-async"] }
base64 = "0.20.0"

[dependencies.yrs]
path = "../yrs"
version = "^0.12.0"
