[package]
name = "y-sync"
version = "0.1.0"
edition = "2021"
description = "Yrs synchronization protocol"
license = "MIT"
authors = ["Bartosz Sypytkowski <b.sypytkowski@gmail.com>"]
keywords = ["crdt", "yrs", "y-sync"]
homepage = "https://github.com/y-crdt/y-sync/"
repository = "https://github.com/y-crdt/y-sync/"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"

[dependencies.lib0]
version = "^0.12.0"
features = ["lib0-serde"]

[dependencies.yrs]
path = "../yrs"
version = "^0.12.0"
